Estilos iniciales de nutresa

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,9 @@
+@import "../node_modules/animate.css/animate.min.css";
+
 body.landing-nutresa{
+    .section__header-nutresa{
+
+    }
     .section__header-brands{
         border: 1px dashed black;
         width: 100%;
@@ -25,15 +30,15 @@ body.landing-nutresa{
 .n-header{
     border: 1px dashed black;
     width: 100%;
-    height: 250px;
+    height: auto;
 }
 .n-banner{
     border: 1px dashed black;
     width: 100%;
-    height: 150px;
+    height: auto;
 }
 .n-row{
     border: 1px dashed black;
     width: 100%;
-    height: 300px;
+    height: 600px;
 }
